--- a/ml_hw4.ipynb
+++ b/ml_hw4.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,8 @@
     "\n",
     "from sklearn import svm\n",
     "from sklearn.metrics import classification_report, f1_score, accuracy_score, confusion_matrix\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score, train_test_split"
+    "from sklearn.model_selection import StratifiedKFold, cross_val_score, train_test_split\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -189,31 +190,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Варьирование параметров."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.792134831461\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = [1, 10, 100, 1000]\n",
+    "gamma = 0.01, 1, 10, 100\n",
+    "\n",
+    "parameters = {'C': C, 'gamma': gamma}\n",
+    "grid = GridSearchCV(model, parameters)\n",
+    "grid.fit(train_x, train_y)\n",
+    "print(grid.best_score_)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 1000, 'gamma': 0.01}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
   }
  ],
  "metadata": {
